# atcc-workshop-uibuilder-tauri-pl

./: .env.development  .env.production  .env.test  .gitignore copy  .npmrc  auto-imports.d.ts  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: main.yml
public/core/: socket.io.js  uibuilderfe.js
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: plcDict.js
src/components/charts/: BasicBarCharts.vue  BasicCharts.vue  BasicPieCharts.vue  BasicTreeMapCharts.vue  CalendarPieCharts.vue  RankBarCharts.vue
src/components/dialogs/: HistoryDialog.vue
src/components/display/: DebugPayload.vue  DigitalNumber.vue  EvaImpactAlert.vue  HorizontalProgress.vue  ImpactAlert.vue  ImpactAlertItem.vue  LabeledNumber.vue  LabeledStatusDot.vue  SmallSwitch.vue  StackImpactAlert.vue  StatedImage.vue  StatusDot.vue  StatusSquare.vue  Timer.vue  XSmallSwitch.vue
src/components/feat/: DevButton.vue  QuitButton.vue
src/components/form/: NumberControl.vue  RoundSwitch.vue  TimeControl.vue
src/components/keyboard/: VirtualInput.vue  VirtualNumber.vue
src/composables/: index.js  router.js  uuid.js
src/composables/electron/: index.js
src/composables/picture/: picture.js
src/composables/size/: page.js
src/composables/uibuilder/: index.js
src/configuration/: devices.js  menu.js
src/helpers/: dict.js  rules.js  value-formatter.js
src/modules/: remote-config.js  router-config.js  uibuilder.js
src/pages/: index.vue
src/store/: device-state.js
(+4 files in other folders)
